<resources>
    <string name="app_name">Hint Food And Drinks</string>

    <string name="title">Hint Food and Drinks</string>
    <string name="email">Username</string>
    <string name="password">Password</string>
    <string name="name">Your name</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="signIn">SIGN IN</string>
    <string name="signUp">SIGN UP</string>
    <string name="signUpIn">Sign up!</string>
    <string name="signInUp">Sign in!</string>
    <string name="haveAccount">Have an account?</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="sign_out">Sign out</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change information</string>

    <string name="home">Home page</string>

    <string name="please_fill_all">Please fill in all fields</string>
    <string name="password_not_match">Password did not match</string>
    <string name="occurred">An error occurred, please try again</string>
    <string name="sign_up_success">Sign up successfully</string>
    <string name="email_existed">Email existed</string>
    <string name="login_success">Login successfully</string>
    <string name="incorrect_info_login">Incorrect login information</string>
    <string name="preference_file_key">com.tungmr.hintfoodandrinks</string>
    <string name="save_success">Edit meal successfully</string>

    <!--    shared key-->
    <string name="usernameKey">username</string>
    <string name="emailKey">email</string>
    <string name="pickedId">pickedId</string>
    <string name="role">role</string>
    <string name="categoryPicked">categoryPicked</string>
    <string name="statusUser">statusUser</string>
    <string name="heightKey">heightKey</string>
    <string name="weightKey">weightKey</string>
    <string name="genderKey">genderKey</string>
    <string name="bmiKey">bmiKey</string>

    <!--    change password-->
    <string name="user_profile">User profile</string>

    <string name="old_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="new_rePassword">Confirm new password</string>
    <string name="confirm">CONFIRM</string>
    <string name="back">BACK</string>
    <string name="password_invalid">Current password is incorrect</string>
    <string name="change_password_successfully">Password was changed</string>

    <!--    admin-->
    <string name="management">APP MANAGEMENT</string>
    <string name="up_meal">Add Meal</string>
    <string name="view_meal">View Meal</string>
    <string name="add">Add</string>
    <string name="meal_name">Meal\'s name</string>
    <string name="meal_des">Description</string>
    <string name="category">Category</string>
    <string name="status">Status</string>
    <string name="meal_image">Image</string>
    <string name="choose_image">Choose an image</string>
    <string name="list_meal">List Meals</string>

    <string name="save">Save</string>
    <string name="meal_detail">Meal detail</string>



    <string name="ask_logout">Do you want to sign out?</string>

    <string name="gender">Gender</string>
    <string name="your_height">Your height (CM) </string>
    <string name="your_weight">Your weight (KG) </string>
    <string name="your_BMI">BMI</string>

    <string name="nutrients">Nutrients</string>
    <string name="protein">Protein (G)</string>
    <string name="fat">Fat (G)</string>
    <string name="carbohydrate">Carbohydrate (G)</string>
    <string name="minerals">Minerals (G)</string>
    <string name="vitamins">Vitamins (G)</string>
    <string name="calories">Calories (KCal) </string>

    <string name="hint_of">Hint of</string>

</resources>
