<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewGenderLog"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender"
            android:textColor="#000"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinnerGenderLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textColor="#000"
            android:textSize="20dp" />

    </LinearLayout>


    <EditText
        android:layout_below="@+id/linearLayout"

        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:inputType="number"

        android:layout_height="wrap_content"
        android:hint="@string/your_weight"
        />

    <EditText

        android:id="@+id/editTextHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/your_height"
        android:layout_below="@+id/editTextWeight"
        />


</RelativeLayout>