<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddMealActivity">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/up_meal"
        android:textSize="20dp"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"         android:textColor="#000"

                android:layout_weight="1"
                android:text="@string/meal_name"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/editTextMealName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"         android:textColor="#000"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_des"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/editTextMealDes"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"         android:textColor="#000"

                android:layout_weight="1"
                android:text="@string/category"
                android:textSize="15dp" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switchStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"         android:textColor="#000"

                android:layout_weight="1"
                android:text="@string/status"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"         android:textColor="#000"

                android:text="@string/meal_image"
                android:textSize="15dp" />

            <Button
                android:id="@+id/buttonChooseAnImage"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="#2EC4B6"
                android:text="@string/choose_image"
                android:textColor="#fff"
                android:textSize="10dp" />

        </LinearLayout>






    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSave"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:elevation="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
        <ImageView
            android:id="@+id/imageViewAfterChooseImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonAddNewMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_add_circle_white"
        android:text="@string/add"
        android:textColor="#fff"
        android:textSize="20dp"
        android:padding="10dp"
        android:background="#2EC4B6"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewSave" />


</androidx.constraintlayout.widget.ConstraintLayout>