<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdminActivity">

    <Button
        android:id="@+id/buttonAdminAddMeal"
        android:layout_width="150dp"
        android:padding="10dp"

        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#2EC4B6"
        android:drawableStart="@drawable/ic_add_circle_white"
        android:gravity="center"
        android:text="@string/up_meal"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonViewMeal" />

    <Button
        android:id="@+id/buttonAdminSignOut"
        android:layout_width="150dp"         android:padding="10dp"

        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#2EC4B6"
        android:drawableStart="@drawable/ic_exit_to_app_white"
        android:gravity="center"

        android:text="@string/sign_out"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdminAddMeal" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/management"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="#2EC4B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonViewMeal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="48dp"
        android:background="#2EC4B6"
        android:drawableStart="@drawable/ic_eye_while"
        android:gravity="center"
        android:text="@string/view_meal"
        android:textColor="#fff"         android:padding="10dp"

        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />
</androidx.constraintlayout.widget.ConstraintLayout>