<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangePassword">

    <androidx.cardview.widget.CardView

        android:id="@+id/cardViewChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:elevation="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/editTextChangeEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#000"

                android:textSize="15dp" />

            <EditText
                android:id="@+id/editTextChangeUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/old_password"

                android:textColor="#000"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/editTextChangeOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:text=""
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="#000"

                android:textSize="15dp" />

            <EditText
                android:id="@+id/editTextChangeNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:text=""
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_rePassword"
                android:textColor="#000"

                android:textSize="15dp" />

            <EditText
                android:id="@+id/editTextChangeNewRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:text=""
                android:textSize="18dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonConfirmChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#2EC4B6"
        android:drawableStart="@drawable/ic_save_white"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewChangePass" />


</androidx.constraintlayout.widget.ConstraintLayout>